# cmakedemo

./: CMakeLists.txt  README.md
multidir/: CMakeLists.txt
